Improve setPos modularity and readability